[metadata]
name = birthday-service
description = "A simple application to store and serve birthdays"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = birthday_service
python_requires = >=3.10, <4
install_requires =
    environs ==9.5.*
    FastAPI[all] ==0.78.*
    psycopg2-binary ==2.9.*
    python-dateutil ==2.8.*
    sqlalchemy ==1.3.*


[options.extras_require]
dev =
    black
    flake8
    freezegun
    ipython
    isort
    mypy
    pytest
    sqlalchemy-stubs
    types-python-dateutil
    types-setuptools

[flake8]
exclude =
    .git
    __pycache__
    venv
max-complexity = 10
max-line-length = 88
ignore = E501,W503

[mypy]
ignore_missing_imports = True
allow_redefinition = True
plugins = sqlmypy
